# raft

./: CMakeLists.txt  FollowerImpl.cpp  FollowerImpl.h  design_for_raft  identity.cpp  identity.h  log.cpp  log.h  main.cpp  raft.cpp  server.cpp
rpc/: LeaderImpl.cc  raft.grpc.pb.cc  raft.grpc.pb.h  raft.pb.cc  raft.pb.h  raft.proto
